--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -84,7 +84,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b>Schritt 1:</b> <br>
-                        Tretet mit uns in <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">&uuml;ber Mail</a></b> in Kontakt! Wir melden uns zeitnah bei Euch. 
+                        Schreibt uns eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b>, wir melden uns zeitnah bei euch.  
 
                     </p>
                 </div>
@@ -93,8 +93,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                         <b> Schritt 2:</b> <br>
-                        Gemeinsam wählen wir in persönlichen Gesprächen die [Workshop- und Aktionsformate] aus, die ihr in eurer Einrichtung bzw. eurem Verband anbieten möchtet. Im Anschluss vereinbaren wir  die Fortbildungs- und Durchf&uuml;hrungstermine. 
-
+                        Gemeinsam wählen wir in persönlichen Gesprächen die Workshop- und Aktionsformate aus, die ihr kennenlernen und in eurer Einrichtung anbieten möchtet. Im Anschluss vereinbaren wir die Fortbildungs- und Durchführungstermine. 
                      </p>
                 </div>
             </div>
@@ -102,7 +101,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
                         <b>Schritt 3: </b> <br>
-                        Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne  zur Seite und können euch f&uuml;r weitere Durchläufe sowohl umfangreiche Materialien   als auch finanzielle Unterst&uuml;tzung. anbieten.         
+                        Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und können euch f&uuml;r weitere Durchläufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
                     </p>
                 </div>
             </div>
