--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -85,7 +85,6 @@ title: "Für Jugendeinrichtungen"
                     <p>
                         <b>Schritt 1:</b> <br>
                         Schreibt uns eine <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Mail</a></b>, wir melden uns zeitnah bei euch.  
-
                     </p>
                 </div>
             </div>
@@ -102,6 +101,14 @@ title: "Für Jugendeinrichtungen"
                     <p>
                         <b>Schritt 3: </b> <br>
                         Wir kommen euch in eurer Einrichtung besuchen, um  euch und engagierte Jugendliche im Sinne eines Train-the-Trainer-Konzepts zu den ausgewählten Workshops zu schulen. Amm darauffolgenden Tag findet die erste Durchf&uuml;hrung mit den Jugendlichen statt. Unsere Formate sollen kein einmaliges Erlebnis bleiben: Bei einer zweiten Durchf&uuml;hrung in eurer Einrichtung stehen wir euch deshalb gerne zur Seite und können euch f&uuml;r weitere Durchläufe sowohl umfangreiche Materialien  als auch finanzielle Unterst&uuml;tzung anbieten.         
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="fond_red_gradient join__statement text__white">
+                    <p>
+                        <b>Wie geht es dann weiter? </b> <br>
+                        Wenn ihr mögt, helfen wir euch im weiteren Verlauf dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten einer Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities, zum Beispiel den OK Labs der Open Knowledge Foundation, geschehen. Auch hierfür stehen wir euch jederzeit persönlich und mit finanziellen Mitteln zur Verfügung.         
                     </p>
                 </div>
             </div>
