--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -108,7 +108,7 @@ title: "Für Jugendeinrichtungen"
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b>Wie geht es dann weiter? </b> <br>
-                        Wenn ihr mögt, helfen wir euch im weiteren Verlauf dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten einer Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities, zum Beispiel den OK Labs der Open Knowledge Foundation, geschehen. Auch hierfür stehen wir euch jederzeit persönlich und mit finanziellen Mitteln zur Verfügung.         
+                        Wenn ihr mögt, helfen wir euch im weiteren Verlauf dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten einer Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities, zum Beispiel den <a href="https://codefor.de/">OK Labs der Open Knowledge Foundation</a>, geschehen. Auch hierfür stehen wir euch jederzeit persönlich und mit finanziellen Mitteln zur Verfügung.         
                     </p>
                 </div>
             </div>
