--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -119,9 +119,10 @@ title: "Für Jugendeinrichtungen"
 
  <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
-        <div class="col-lg-8"> 
-            <p>
-                Im weiteren Verlauf helfen wir euch (bei Interesse) dabei das Workshopthema zu vertiefen. Dies kann durch das Einrichten eine Arbeitsgruppe, durch die Bereitstellung von Selbstlernmaterialien oder durch die Anbindung an bestehende Tech-Communities geschehen. Auch hierf&uuml;r stehen unterst&uuml;tzend finanzielle Mittel zur Verf&uuml;gung.      
+        <div class="col-lg-8">
+            <h2>Wie kann man als <strong>Bildungsverband, Initiative oder gemeinnützige Organisation</strong> bei den Demokratielaboren mitmachen?</h2>
+            <p class="text">
+                Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine Mail an info@datenschule.de. Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch auf https://datenschule.de/.      
             </p>
        </div>
     </div>
