--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -116,8 +116,7 @@ title: "Für Jugendeinrichtungen"
     </div>
  </div>
 
-
- <div class="beneath-sections jumbotron fond__grey-bright">
+ <div class="beneath-sections jumbotron">
     <div class="container text__black">
         <div class="col-lg-8">
             <h2>Wie kann man als <strong>Bildungsverband, Initiative oder gemeinnützige Organisation</strong> bei den Demokratielaboren mitmachen?</h2>
