--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -117,8 +117,8 @@ title: "Für Jugendeinrichtungen"
  </div>
 
  <div class="beneath-sections jumbotron">
-    <div class="container text__black">
-        <div class="col-lg-8">
+    <div class="container text__white">
+        <div class="col-lg-12 title">
             <h2>Wie kann man als <strong>Bildungsverband, Initiative oder gemeinnützige Organisation</strong> bei den Demokratielaboren mitmachen?</h2>
             <p class="text">
                 Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine Mail an info@datenschule.de. Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch auf https://datenschule.de/.      
@@ -126,6 +126,5 @@ title: "Für Jugendeinrichtungen"
        </div>
     </div>
  </div>
-
 
 </div>
