--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -117,7 +117,7 @@ title: "Für Jugendeinrichtungen"
  </div>
 
  <div class="beneath-sections jumbotron">
-    <div class="container text__white">
+    <div class="container text__black">
         <div class="col-lg-12 title">
             <h2>Wie kann man als <strong>Bildungsverband, Initiative oder gemeinnützige Organisation</strong> bei den Demokratielaboren mitmachen?</h2>
             <p class="text">
