--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -121,7 +121,7 @@ title: "Für Jugendeinrichtungen"
         <div class="col-lg-12 title">
             <h2>Wie kann man als <strong>Bildungsverband, Initiative oder gemeinnützige Organisation</strong> bei den Demokratielaboren mitmachen?</h2>
             <p class="text">
-                Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine Mail an info@datenschule.de. Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch auf https://datenschule.de/.      
+                Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine <b><a class="text__blue text__white" href="mailto:info@datenschule.de">Mail</a></b>. Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch auf <a href="https://datenschule.de/">Datenschule.de</a>.      
             </p>
        </div>
     </div>
