--- a/presse/index.html
+++ b/presse/index.html
@@ -11,11 +11,7 @@ title: Presse
 		<div class="row">
 			<div class="col-lg-12 title">
 				<p>
-					Pressekrams
-				</p>
-			</div>
-			<div class="col-lg-8 col-lg-offset-4">
-				<p>
+					Infomaterial
 					Während f&uuml;r die Jugendlichen die Inhalte der Angebote im Vordergrund stehen, möchten wir die kooperierenden Einrichtungen durch Qualifikationsmöglichkeiten in den Bereichen Digitalisierung und Technologie unterst&uuml;tzen. Im Fokus aller Aktivitäten steht der Gebrauch von digitalen Werkzeugen und Technologien zur Beteiligung an gesellschaftlichen Prozessen - egal ob international oder hyperlokal. Wichtig ist uns, eine möglichst hohe Diversität zu erreichen: Wir wollen mit Jugendeinrichtungen in ganz Deutschland zusammenarbeiten, egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel. Jede*r ist bei uns willkommen!
 				</p>
 			</div>
