--- a/presse/index.html
+++ b/presse/index.html
@@ -12,7 +12,7 @@ title: Presse
 			<div class="col-lg-12 title">
 				<h1> Infomaterial </h1>
 				<p>
-					Hier findet ihr alle Infomaterialien.
+					Hier findet ihr alle Infomaterialien zum Download.
 				</p>
 			</div>
 		</div>
