--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ title: Hello
         </div>
     </div>
 </div>
+<div class="parallax"></div>
 <!--<div class="beneath-sections jumbotron fond__grey-bright">-->
     <!--<div class="container text__black title">-->
         <!--<div class="col-lg-10  text-left">-->
