--- a/projekt/index.html
+++ b/projekt/index.html
@@ -42,8 +42,8 @@ title: "Info"
         </div>
     </div>
 </div>
-
- <div class="beneath-sections jumbotron fond__white">
+<div class="parallax"></div>
+<div class="beneath-sections jumbotron fond__white">
     <div class="container text__black">
         <div class="col-lg-12">
             <h2>Unsere Formate</h2>
@@ -90,8 +90,8 @@ title: "Info"
             </div>
         </div>
     </div>
- </div>
-
+</div>
+<div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
         <div class="row goals">
@@ -104,7 +104,7 @@ title: "Info"
         </div>
     </div>
 </div>
-
+<div class="parallax"></div>
 <div class="beneath-sections jumbotron">
     <div class="container">
         <div class="row goals">
