--- a/projekt/index.html
+++ b/projekt/index.html
@@ -19,7 +19,7 @@ title: "Info"
         </div>
     </div>
 </div>
-
+<div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
         <div class="row goals">
