--- a/projekt/index.html
+++ b/projekt/index.html
@@ -108,7 +108,7 @@ title: "Info"
 <div class="beneath-sections jumbotron">
     <div class="container">
         <div class="row goals">
-            <h2 class="text-center">Leitbild</h2>
+            <h2 class="text-center">Unser Leitbild</h2>
             <ul>
                 <li>Die Richtlinien des Beutelsbacher Konsens sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
                 <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als Open Educational Resources.</li>
