--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ title: Hello
         <div class="row">
             <div class="col-lg-12 title">
                 <p>
-                    Die Demokratielabore sind ein Modellprojekt des Open Knowledge Foundation Deutschland e.V., das Jugendlichen im Alter von 12 bis 21 Jahren Spaß an digitalen Werkzeugen und Technologien vermitteln will, die es ermöglichen, sich besser an gesellschaftlichen Prozessen zu beteiligen und sie aktiv mitzugestalten. <br>
-                    <a href="/info"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
-
+                   Die Demokratielabore sind ein Modellprojekt der <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom Bundesministerium für Familie, Senioren, Frauen und Jugend im Rahmen des Bundesprogramms <a href="https://www.demokratie-leben.de/">Demokratie leben!</a> gefördert wird. <br>
+                   Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Bildungsverbänden und Initiativen zusammen - deutschlandweit. <br>
+                   <a href="/info"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
                 </p>   
             </div>
         </div>
@@ -67,7 +67,6 @@ title: Hello
         </div>
     </div>
 </div>
-<div class="parallax"></div>
 <!--<div class="beneath-sections jumbotron fond__grey-bright">-->
     <!--<div class="container text__black title">-->
         <!--<div class="col-lg-10  text-left">-->
