--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ title: Hello
     <!--</div>-->
 <!--</div>-->
 <div class="parallax"></div>
-<div class="beneath-sections jumbotron fond__white">
+<div class="beneath-sections jumbotron">
     <div class="container text__black">
         <div class="row">
             <div class="col-lg-12 title">
