--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -12,7 +12,7 @@ title: "Für Jugendeinrichtungen"
             <div class="col-lg-12 title">
                 <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
-                   Mit den Demokratielaboren richten wir uns zum einen an Jugendliche zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <a href="">Wie?</a></br>
+                   Mit den Demokratielaboren richten wir uns zum einen an Jugendliche zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <a href="#anchor_jugendliche">Wie?</a></br>
                    Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. Wie?</br>
                    Auch als Träger von Jugendeinrichtungen, Bildungsverband oder NGO kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. Wie?</br>
                 <br>
@@ -28,6 +28,7 @@ title: "Für Jugendeinrichtungen"
     <div class="container text__white">
         <div class="row">
             <div class="col-lg-12 title">
+                <a title="anchor_jugendliche"></a>
                 <h2>Wie kann man als <strong>Jugendliche*r</strong> bei den Demokratielaboren mitmachen?</h2>
                <p class="text">
                     Du hast Lust, an einem unserer Workshops oder Aktionen teilzunehmen? Toll! Dann wirf am besten als erstes einen Blick auf unsere Termine, denn dort kannst du sehen, ob wir bald in deiner Nähe sind. Falls nicht, schreib uns gerne eine Mail und wir schauen, ob wir z.B. in deinem Jugendclub etwas organisieren können.
