--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -24,8 +24,7 @@ title: "Für Jugendeinrichtungen"
     </div>
 </div>
 
-<div class="beneath-sections jumbotron fond_darkblue_gradient">
-    <a name="anchor_jugendliche"></a>
+<div class="beneath-sections jumbotron fond_darkblue_gradient">  <a name="anchor_jugendliche"></a>
     <div class="container text__white">
         <div class="row">
             <div class="col-lg-12 title">
