--- a/projekt/index.html
+++ b/projekt/index.html
@@ -49,7 +49,8 @@ title: "Info"
             <h2>Unsere Formate</h2>
         </div>
         <div class="col-lg-12">
-            <p> Für die Umsetzung unseres Vorhabens haben wir verschiedene Angebote für Jugendliche und Jugendeinrichtungen entwickelt. Dazu zählen unterschiedliche Workshops, die nach einer Schulung mit Hilfe unseres Train-the-Trainers-Konzeptes direkt an pädagogische Fachkräfte und engagierte Jugendliche weitergegeben werden. Wir möchten auch das Communitybuilding fördern und bieten Hilfe bei der Entstehung von Demokratie-AGs in Jugendeinrichtungen an. In unserem WebTV-Channel gibt es außerdem regelmäßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten können. Überregionalen Bildungsverbänden und Initiativen bieten wir die Möglichkeit bei einem Workshop zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. Mehr erfahren!
+            <p> Für die Umsetzung unseres Vorhabens haben wir verschiedene Angebote für Jugendliche und Jugendeinrichtungen entwickelt. Dazu zählen unterschiedliche Workshops, die nach einer Schulung mit Hilfe unseres Train-the-Trainers-Konzeptes direkt an pädagogische Fachkräfte und engagierte Jugendliche weitergegeben werden. Wir möchten auch das Communitybuilding fördern und bieten Hilfe bei der Entstehung von Demokratie-AGs in Jugendeinrichtungen an. In unserem WebTV-Channel gibt es außerdem regelmäßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten können. Überregionalen Bildungsverbänden und Initiativen bieten wir die Möglichkeit bei einem Workshop zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. 
+                <a href="/angebote"><button class="btn btn-start">Mehr erfahren!</button> </a> 
             </p>
         </div>
         <div class="col-lg-12">
