--- a/projekt/index.html
+++ b/projekt/index.html
@@ -53,7 +53,10 @@ title: "Info"
                 <a href="/angebote"><button class="btn btn-start">Mehr erfahren!</button> </a> 
             </p>
         </div>
-        <div class="col-lg-12">
+     </div>
+</div>
+<!--      
+<div class="col-lg-12">
             <div class="col-lg-12">
                 <div class="fond_green_gradient join__statement text__white">
                     <p>
@@ -92,6 +95,8 @@ title: "Info"
         </div>
     </div>
 </div>
+--->
+
 <div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
