--- a/projekt/index.html
+++ b/projekt/index.html
@@ -43,7 +43,7 @@ title: "Info"
     </div>
 </div>
 <div class="parallax"></div>
-<div class="beneath-sections jumbotron fond__white">
+<div class="beneath-sections jumbotron">
     <div class="container text__black">
         <div class="col-lg-12">
             <h2>Unsere Formate</h2>
