--- a/projekt/index.html
+++ b/projekt/index.html
@@ -104,7 +104,7 @@ title: "Info"
             <h2 class="text-center">Evaluation</h2>
             <div class="col-lg-12">
                 <p>
-                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das Forschungsinstitut Nexus aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
+                    Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
                 </p>
             </div>
         </div>
