--- a/projekt/index.html
+++ b/projekt/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: "Info"
+title: "Projekt"
 
 ---
 
@@ -8,6 +8,7 @@ title: "Info"
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
+            <h1>Das Projekt</h1>
             <div class="col-lg-12 title">
                 <!--<h1>Die Demokratielabore</h1>-->
                 <p>
