--- a/angebote/index.html
+++ b/angebote/index.html
@@ -21,6 +21,7 @@ title: "Angebote"
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
+         <h1>Unsere Angebote</h1>
             <p class="text">
                     Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Bildungsverbände und Träger von Jugendbildungsstätten. 
                 </p>
