--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,7 +129,7 @@ title: "Angebote"
         </div>
     </div>
 </div>
-
+<div class="parallax"></div>
 <div class="col-lg-12">
             <div class="col-lg-12">
                 <div class="fond_green_gradient join__statement text__white">
@@ -158,7 +158,7 @@ title: "Angebote"
         </div>
     </div>
 </div>
-
+<div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
         <div class="row">
@@ -172,7 +172,7 @@ title: "Angebote"
         </div>
     </div>
  </div>
-
+<div class="parallax"></div>
  <div class="beneath-sections jumbotron">
     <div class="container text__black">
         <div class="row">
