--- a/angebote/index.html
+++ b/angebote/index.html
@@ -130,7 +130,7 @@ title: "Angebote"
     </div>
 
     <div class="col-lg-12">
-            <div class="col-lg-12">
+            <div class="col-lg-7 col-lg-offset-2">
                 <div class="fond_green_gradient join__statement text__white">
                     <p>
                         <b>Train-the-Trainer:</b> <br>
@@ -138,7 +138,7 @@ title: "Angebote"
                     </p>
                 </div>
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-7 col-lg-offset-1">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
                         <b> Demokratie-AGs</b> <br>
@@ -146,7 +146,7 @@ title: "Angebote"
                      </p>
                 </div>
             </div>
-            <div class="col-lg-14">
+            <div class="col-lg-7 col-lg-offset-3">
                 <div class="fond_purple_gradient join__statement text__white">
                     <p>
                         <b> WebTV-Format</b> <br>
