--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,7 +129,33 @@ title: "Angebote"
         </div>
     </div>
 
-    <div class="col-lg-12">
+   <div class="col-lg-12">
+            <div class="col-lg-9 col-lg-offset-2">
+                <div class="fond_red_gradient join__statement text__white">
+                    <p>
+                       <b>Train-the-Trainer:</b> <br>
+                        Damit unsere Workshopangebote keine einmalige Sache bleiben, wollen wir unser Wissen weitergeben: Mit Hilfe eines Train-the-Trainer-Konzeptes könnt ihr als interessierte Mitarbeiter*innen, Pädagog*innen und Jugendliche die Workshops schnell und einfach selbst lernen und jederzeit auch ohne uns durchführen - so oft ihr wollt! Wir stehen euch dabei unterstützend zur Seite - personell wie finanziell. 
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-9 "> 
+                <div class="fond_purple_gradient join__statement text__white">
+                    <p>
+                         <b> Demokratie-AGs</b> <br>
+                       Ihr habt nach den Workshops Lust bekommen, euch noch mehr mit diesen Themen zu beschäftigen? Super! Wir möchten euch dabei unterstützen, z.B. durch die Gründung einer AG in eurer Jugendeinrichtung, in der ihr zu aktuellen gesellschaftlichen und digital gestützten Themen eurer Wahl arbeiten könnt. Ein erstes Thema könnte die Bundestagswahl im September 2017 sein: Was haltet ihr davon, gemeinsam Wahl(daten)parties zu planen?
+                     </p>
+                </div>
+            </div>
+            <div class="col-lg-9 col-lg-offset-3">
+                <div class="fond_blue_gradient join__statement text__white"> 
+                    <p>
+                        <b> WebTV-Format</b> <br>
+                        Wir wollen in einem WebTV-Format wöchentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt über? Dann meldet euch bei uns: info@demokratielabore.de                
+                    </p>
+                </div>
+            </div>
+</div>
+<!--- <div class="col-lg-12">
             <div class="col-lg-7 col-lg-offset-2">
                 <div class="fond_green_gradient join__statement text__white">
                     <p>
@@ -156,7 +182,8 @@ title: "Angebote"
             </div>
         </div>
     </div>
-</div>
+ </div> --->
+
 <div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
