--- a/angebote/index.html
+++ b/angebote/index.html
@@ -126,9 +126,10 @@ title: "Angebote"
                     <!--</div>-->
                 <!--</div>-->
             </div>
-        
+        </div>
+    </div>
 
-   <div class="col-lg-12">
+   
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
