--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,7 +129,7 @@ title: "Angebote"
         </div>
     </div>
 
-   
+   <div class="col-lg-12">
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
