--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,6 +129,8 @@ title: "Angebote"
         </div>
     </div>
 
+<div class="beneath-sections jumbotron fond__grey-bright">
+ <div class="container text__black">
    <div class="col-lg-12">
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
@@ -154,7 +156,10 @@ title: "Angebote"
                     </p>
                 </div>
             </div>
+    </div>
+  </div>
 </div>
+
 <!--- <div class="col-lg-12">
             <div class="col-lg-7 col-lg-offset-2">
                 <div class="fond_green_gradient join__statement text__white">
