--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,7 +129,7 @@ title: "Angebote"
         </div>
     </div>
 
-<div class="beneath-sections jumbotron fond__grey-bright">
+<div class="beneath-sections jumbotron fond__white-bright">
  <div class="container text__black">
    <div class="col-lg-12">
             <div class="col-lg-9 col-lg-offset-2">
