--- a/angebote/index.html
+++ b/angebote/index.html
@@ -129,7 +129,7 @@ title: "Angebote"
         </div>
     </div>
 
-<div class="beneath-sections jumbotron fond__white-bright">
+<div class="beneath-sections jumbotron fond__white">
  <div class="container text__black">
    <div class="col-lg-12">
             <div class="col-lg-9 col-lg-offset-2">
@@ -196,8 +196,8 @@ title: "Angebote"
             <div class="col-lg-12 title">
                 <h1>Für Bildungsverbände & gemeinnützige Organisationen</h1>
                <p class="text">
-                    Digitaler Werkzeugkasten für überregionale Bildungsverbände & gemeinnützige Organisationen:
-                    Wir wollen Träger von außerschulischen Jugendeinrichtungen und Bildungsverbänden auf dem Weg in die Digitalisierung begleiten. In unserem zweitägigen Workshop experimentieren wir mit digitalen Tools und zeigen beispielsweise wie man mit Daten gute Stories erzählen kann. Dazu führen wir zunächst eine Bedarfsanalyse durch, aus deren Ergebnisse wir dann einen Workshop entwickeln. Dieser ist auf die Bedürfnisse und Fragen der Initiativen zugeschnitten und enthält einige Tipps & Tools für eine gute Datenarbeit. Alle Lernmaterialien werden im Anschluss in einem “Werkzeugkoffer” frei zugänglich bereitgestellt. Mehr Infos zu digitalen Projekten und datengestützter Arbeit gibt es hier: https://datenschule.de. 
+                    <br> Digitaler Werkzeugkasten für überregionale Bildungsverbände & gemeinnützige Organisationen: </br>
+                    Wir wollen Träger von außerschulischen Jugendeinrichtungen und Bildungsverbänden auf dem Weg in die Digitalisierung begleiten. In unserem zweitägigen Workshop experimentieren wir mit digitalen Tools und zeigen beispielsweise wie man mit Daten gute Stories erzählen kann. Dazu führen wir zunächst eine Bedarfsanalyse durch, aus deren Ergebnisse wir dann einen Workshop entwickeln. Dieser ist auf die Bedürfnisse und Fragen der Initiativen zugeschnitten und enthält einige Tipps & Tools für eine gute Datenarbeit. Alle Lernmaterialien werden im Anschluss in einem “Werkzeugkoffer” frei zugänglich bereitgestellt. Mehr Infos zu digitalen Projekten und datengestützter Arbeit gibt es <a href="https://datenschule.de">hier</a>. 
                 </p>
             </div>
         </div>
