--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -79,7 +79,7 @@ title: "Für Jugendeinrichtungen"
  <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
         <div class="col-lg-12">
-            <h2>  Wie kann man als Jugendeinrichtung bei den Demokratielaboren mitmachen?</h2>
+            <h2>  Wie kann man als <strong>Jugendeinrichtung</strong> bei den Demokratielaboren mitmachen?</h2>
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
