--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -23,7 +23,7 @@ title: "Für Jugendeinrichtungen"
         </div>
     </div>
 </div>
-
+<div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">  <a name="anchor_jugendliche"></a>
     <div class="container text__white">
         <div class="row">
@@ -36,7 +36,7 @@ title: "Für Jugendeinrichtungen"
         </div>
     </div>
 </div>
-
+<div class="parallax"></div>
 <!-- A
 <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
@@ -115,7 +115,7 @@ title: "Für Jugendeinrichtungen"
         </div>
     </div>
  </div>
-
+<div class="parallax"></div>
  <div class="beneath-sections jumbotron">
     <div class="container text__black">
         <div class="col-lg-12 title">
