--- a/projekt/index.html
+++ b/projekt/index.html
@@ -102,7 +102,7 @@ title: "Projekt"
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
         <div class="row goals">
-            <h2 class="text-center">Evaluation</h2>
+            <h2>Evaluation</h2>
             <div class="col-lg-12">
                 <p>
                     Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
@@ -115,7 +115,7 @@ title: "Projekt"
 <div class="beneath-sections jumbotron">
     <div class="container">
         <div class="row goals">
-            <h2 class="text-center">Unser Leitbild</h2>
+            <h2>Unser Leitbild</h2>
             <ul>
                 <li>Die Richtlinien des Beutelsbacher Konsens sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
                 <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als Open Educational Resources.</li>
