--- a/projekt/index.html
+++ b/projekt/index.html
@@ -8,7 +8,7 @@ title: "Projekt"
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
         <div class="row">
-            <h1>Das Projekt</h1>
+            <h1><strong>Das Projekt</strong></h1>
             <div class="col-lg-12 title">
                 <!--<h1>Die Demokratielabore</h1>-->
                 <p>
@@ -47,7 +47,7 @@ title: "Projekt"
 <div class="beneath-sections jumbotron">
     <div class="container text__black">
         <div class="col-lg-12">
-            <h2>Unsere Formate</h2>
+            <h2><strong>Unsere Formate</strong></h2>
         </div>
         <div class="col-lg-12">
             <p> Für die Umsetzung unseres Vorhabens haben wir verschiedene Angebote für Jugendliche und Jugendeinrichtungen entwickelt. Dazu zählen unterschiedliche Workshops, die nach einer Schulung mit Hilfe unseres Train-the-Trainers-Konzeptes direkt an pädagogische Fachkräfte und engagierte Jugendliche weitergegeben werden. Wir möchten auch das Communitybuilding fördern und bieten Hilfe bei der Entstehung von Demokratie-AGs in Jugendeinrichtungen an. In unserem WebTV-Channel gibt es außerdem regelmäßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten können. Überregionalen Bildungsverbänden und Initiativen bieten wir die Möglichkeit bei einem Workshop zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. <br> 
@@ -102,7 +102,7 @@ title: "Projekt"
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
         <div class="row goals">
-            <h2>Evaluation</h2>
+            <h2><strong>Evaluation</strong></h2>
             <div class="col-lg-12">
                 <p>
                     Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
@@ -115,7 +115,7 @@ title: "Projekt"
 <div class="beneath-sections jumbotron">
     <div class="container">
         <div class="row goals">
-            <h2>Unser Leitbild</h2>
+            <h2><strong>Unser Leitbild</strong></h2>
             <ul>
                 <li>Die Richtlinien des Beutelsbacher Konsens sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
                 <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als Open Educational Resources.</li>
