--- a/projekt/index.html
+++ b/projekt/index.html
@@ -7,10 +7,9 @@ title: "Projekt"
 <!-- Info -->
 <div class="beneath-sections jumbotron fond__white margin-top-huge">
     <div class="container text__black">
-        <div class="row">
+        <div class="col-lg-12">
             <h1><strong>Das Projekt</strong></h1>
-            <div class="col-lg-12 title">
-                <!--<h1>Die Demokratielabore</h1>-->
+            <div class="col-lg-12">
                 <p>
                     <br>Die Demokratielabore sind ein Modellprojekt der <a href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a href="http://www.bmfsfj.de">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a href="http://www.demokratie-leben.de">Demokratie leben!</a> gefördert wird.</br> 
                     
