--- a/projekt/index.html
+++ b/projekt/index.html
@@ -100,27 +100,27 @@ title: "Projekt"
 <div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
-        <div class="row goals">
+        <div class="col-lg-12">
             <h2><strong>Evaluation</strong></h2>
+        </div>
             <div class="col-lg-12">
                 <p>
                     Unsere Workshops werden von Expert*innen entwickelt und sind konkret auf Jugendliche zugeschnitten. Um die Qualität unseres Angebots zu sichern, begleitet uns bei diesem Vorhaben das <a href="http://www.nexusinstitut.de/">Forschungsinstitut Nexus</a> aus Berlin, das uns sowohl bei der Konzeption unserer Formate berät, als auch einige Workshop-Durchführungen in Jugendeinrichtungen bis Ende 2017 evaluiert. Die Ergebnisse der Evaluation werden in einem Abschlussbericht unter freier Lizenz veröffentlicht. 
                 </p>
             </div>
-        </div>
     </div>
 </div>
 <div class="parallax"></div>
 <div class="beneath-sections jumbotron">
     <div class="container">
-        <div class="row goals">
+        <div class="col-lg-12">
             <h2><strong>Unser Leitbild</strong></h2>
+        </div>
             <ul>
                 <li>Die Richtlinien des Beutelsbacher Konsens sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
                 <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als Open Educational Resources.</li>
                 <li>Wir arbeiten überparteilich und unabhängig.</li>
             </ul>
-        </div>
     </div>
 </div>
 
