--- a/projekt/index.html
+++ b/projekt/index.html
@@ -117,8 +117,8 @@ title: "Projekt"
             <h2><strong>Unser Leitbild</strong></h2>
         </div>
             <ul>
-                <li>Die Richtlinien des Beutelsbacher Konsens sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
-                <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als Open Educational Resources.</li>
+                <li>Die Richtlinien des <a href="http://www.bpb.de/die-bpb/51310/beutelsbacher-konsens">Beutelsbacher Konsens</a> sind maßgeblich und richtungsweisend in unserer Jugendbildungsarbeit.</li>
+                <li>Wir veröffentlichen alle Inhalte des Projekts, soweit dies möglich ist, unter freier Lizenz als <a href="https://de.wikipedia.org/wiki/Open_Educational_Resources">Open Educational Resources (OER)</a>.</li>
                 <li>Wir arbeiten überparteilich und unabhängig.</li>
             </ul>
     </div>
