--- a/angebote/index.html
+++ b/angebote/index.html
@@ -152,7 +152,7 @@ title: "Angebote"
                 <div class="fond_blue_gradient join__statement text__white"> 
                     <p>
                         <b> WebTV-Format</b> <br>
-                        Wir wollen in einem WebTV-Format wöchentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt über? Dann meldet euch bei uns: info@demokratielabore.de                
+                        Wir wollen in einem WebTV-Format wöchentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und euch als Kenner*innen der Netz-TV-Welt Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. Egal was euch bewegt, euren Ideen sind keine Grenzen gesetzt! Eure Ideen sprudeln schon jetzt über? <b><a class="text__blue text__white" href="mailto:info@demokratielabore.de">Dann meldet euch bei uns!</a></b>                
                     </p>
                 </div>
             </div>
