--- a/angebote/index.html
+++ b/angebote/index.html
@@ -189,16 +189,16 @@ title: "Angebote"
     </div>
  </div> --->
 
-<div class="parallax"></div>
+<div class="col-lg-12">
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
-            <div class="col-lg-12 title">
-                <h1>Für Bildungsverbände & gemeinnützige Organisationen</h1>
+            <div class="col-lg-12">
+                <h2>Für Bildungsverbände & gemeinnützige Organisationen</h2>
+            </div>
                <p class="text">
                     <br> <strong>Digitaler Werkzeugkasten für überregionale Bildungsverbände & gemeinnützige Organisationen: </strong></br>
                     <br> Wir wollen Träger von außerschulischen Jugendeinrichtungen und Bildungsverbänden auf dem Weg in die Digitalisierung begleiten. In unserem zweitägigen Workshop experimentieren wir mit digitalen Tools und zeigen beispielsweise wie man mit Daten gute Stories erzählen kann. Dazu führen wir zunächst eine Bedarfsanalyse durch, aus deren Ergebnisse wir dann einen Workshop entwickeln. Dieser ist auf die Bedürfnisse und Fragen der Initiativen zugeschnitten und enthält einige Tipps & Tools für eine gute Datenarbeit. Alle Lernmaterialien werden im Anschluss in einem “Werkzeugkoffer” frei zugänglich bereitgestellt. Mehr Infos zu digitalen Projekten und datengestützter Arbeit gibt es <a href="https://datenschule.de">hier</a>. 
                 </p>
-            </div>
         </div>
     </div>
  </div>
