--- a/angebote/index.html
+++ b/angebote/index.html
@@ -189,7 +189,7 @@ title: "Angebote"
     </div>
  </div> --->
 
-<div class="col-lg-12">
+<div class="parallax"></div>
 <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
             <div class="col-lg-12">
