--- a/angebote/index.html
+++ b/angebote/index.html
@@ -36,7 +36,7 @@ title: "Angebote"
         </div>
 
         <div class="col-lg-12">
-            <h1>slideritis</h1>
+            <h3>Workshops</h3>
             <div class="project-slider">
                 <div class="format__point_one fond_red_gradient">
                     <div class="format__illustration-wrapper">
@@ -205,14 +205,11 @@ title: "Angebote"
 <div class="parallax"></div>
  <div class="beneath-sections jumbotron">
     <div class="container text__black">
-        <div class="row">
-            <div class="col-lg-12 title">
-                <h1>Materialien</h1>
-               
+        <div class="col-lg-12">
+                <h2>Materialien</h2>
+        </div>
                 <p class="text">
                     Unsere Workshops, Konzepte & Lernmaterialien sollen für jede*n jederzeit zugänglich, nachvollziehbar und leicht erlernbar sein. Daher veröffentlichen wir an dieser Stelle alle Materialien aus unseren Angeboten unter freier Lizenz. 
                 </p>
-            </div>
-        </div>
      </div>
 </div>
