--- a/angebote/index.html
+++ b/angebote/index.html
@@ -192,7 +192,8 @@ title: "Angebote"
 <div class="parallax"></div>
  <div class="beneath-sections jumbotron fond_darkblue_gradient">
     <div class="container text__white">
-            <div class="col-lg-12">
+     <div class="row">
+            <div class="col-lg-12-title">
                 <h2>Für Bildungsverbände & gemeinnützige Organisationen</h2>
             </div>
                <p class="text">
