--- a/angebote/index.html
+++ b/angebote/index.html
@@ -206,11 +206,13 @@ title: "Angebote"
 <div class="parallax"></div>
  <div class="beneath-sections jumbotron">
     <div class="container text__black">
-        <div class="col-lg-12">
+     <div class="row">
+        <div class="col-lg-12-title">
                 <h2>Materialien</h2>
         </div>
                 <p class="text">
                     Unsere Workshops, Konzepte & Lernmaterialien sollen für jede*n jederzeit zugänglich, nachvollziehbar und leicht erlernbar sein. Daher veröffentlichen wir an dieser Stelle alle Materialien aus unseren Angeboten unter freier Lizenz. 
                 </p>
      </div>
+  </div>  
 </div>
