--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -13,8 +13,8 @@ title: "Für Jugendeinrichtungen"
                 <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
                    Mit den Demokratielaboren richten wir uns zum einen an Jugendliche zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br><a href=""><button class="btn btn-start">Wie?</button></a></br>
-                   Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. <a href=""><button class="btn btn-start">Wie?</button></a></br>
-                   Auch als Träger von Jugendeinrichtungen, Bildungsverband oder NGO kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <a href=""><button class="btn btn-start">Wie?</button></a></br>
+                   Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. <br><a href=""><button class="btn btn-start">Wie?</button></a></br>
+                   Auch als Träger von Jugendeinrichtungen, Bildungsverband oder NGO kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <br><a href=""><button class="btn btn-start">Wie?</button></a></br>
                 <br>
                    Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen & Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
                 </br>
