--- a/angebote/index.html
+++ b/angebote/index.html
@@ -132,6 +132,9 @@ title: "Angebote"
 <div class="beneath-sections jumbotron fond__white">
  <div class="container text__black">
    <div class="col-lg-12">
+    <div class="col-lg-12-title">
+     <h3>Weitere Angebote</h3>
+    </div>
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
