--- a/angebote/index.html
+++ b/angebote/index.html
@@ -50,7 +50,7 @@ title: "Angebote"
                             <b>Lügen & Presse</b> 
                             <br> Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! </br>
                             <b>Themen: </b> Medienanalyse und Fake News</b>
-                            <b>Prinzip: </b> Simulationsspiel/Gruppenspiel</b>
+                            <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Simulationsspiel">Simulationsspiel/Gruppenspiel</a></b>
                             <b>Dauer: </b> 2-4 Stunden</b>
                     </div>
                 </div>
@@ -66,7 +66,7 @@ title: "Angebote"
                             <b>Invasion der Cybertrolle</b> <br>
                             Argumente gegen Trolle - ihr  verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Dungeon-Masters (Spielleiters), Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!</br>
                             <b>Thema:</b> Diskussionskultur im Netz</b>
-                            <b>Prinzip: </b> Digitales Pen&Paper-Rollenspiel</b>
+                            <b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Pen-%26-Paper-Rollenspiel">Digitales Pen&Paper-Rollenspiel</a></b>
                             <b>Dauer: </b> 2-8 Stunden</b>
                         </p>
                     </div>
@@ -83,7 +83,7 @@ title: "Angebote"
                             <!--<b>Ungehörsam</b> <br>-->
                             <!--Gut und verrückt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausgänge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erzählen den Ablauf, in dem ihr entscheiden müsst, wie man sich verhält. So erschließt ihr euch Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?</br>-->
                             <!--<b>Thema:</b> Kreative Meinungsäußerung-->
-                            <!--<b>Prinzip: </b> Digitales Spielbuch</b>-->
+                            <!--<b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Spielbuch">Digitales Spielbuch</a></b>-->
                             <!--<b>Dauer: </b> 4 Stunden bis 2 Tage</b>-->
                         <!--</p>-->
                     <!--</div>-->
@@ -101,7 +101,7 @@ title: "Angebote"
                             <!--<b>Escape Populism</b>--> 
                             <!--<br> Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erfüllen müsst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und müsst euch im Team verständigen, um knifflige Rätsel zu lösen, die euch auch moralisch auf die Probe stellen!</br>--> 
                             <!--<b>Thema:</b> Populismus-->
-                            <!--<b>Prinzip: </b> Escape Game</b>-->
+                            <!--<b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Escape_Game">Escape Game</a></b>-->
                             <!--<b>Dauer: </b> 2-4 Stunden</b>--> 
                         <!--</p>-->
                     <!--</div>-->
@@ -119,7 +119,7 @@ title: "Angebote"
                             <!--<b>Game of Thoughts</b>--> 
                             <!--<br> Kleine Spiele selbst gemacht - In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage “Was müsste man daran mal ändern?” in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.</br>-->
                             <!--<b>Thema: </b>Meinungsbildung-->
-                            <!--<b>Prinzip: </b>Game Jam</b>-->
+                            <!--<b>Prinzip: </b> <a href="https://de.wikipedia.org/wiki/Game_Jam">Game Jam</a></b>-->
                             <!--<b>Dauer: </b> 4 Stunden bis 3 Tage</b>-->
 
                         <!--</p>-->
