--- a/angebote/index.html
+++ b/angebote/index.html
@@ -159,6 +159,7 @@ title: "Angebote"
                     </p>
                 </div>
             </div>
+        </div>
     </div>
   </div>
 </div>
