--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -13,7 +13,7 @@ title: "Für Jugendeinrichtungen"
                 <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
                    Mit den Demokratielaboren richten wir uns zum einen an Jugendliche zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <a href="#Jugendliche">Wie?</a> <br>
-                   Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. <a href="">Wie?</a><br>
+                   Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. <a href="#Jugendeinrichtung">Wie?</a><br>
                    Auch als Träger von Jugendeinrichtungen, Bildungsverband oder NGO kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <a href="">Wie?</a><br>
                 <br>
                    Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen & Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
@@ -79,7 +79,7 @@ title: "Für Jugendeinrichtungen"
  <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
         <div class="col-lg-12">
-            <h2>  Wie kann man als <strong>Jugendeinrichtung</strong> bei den Demokratielaboren mitmachen?</h2>
+            <h2 id="Jugendeinrichtung">Wie kann man als <strong>Jugendeinrichtung</strong> bei den Demokratielaboren mitmachen?</h2>
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
